--- a/cat-coffee/style.css
+++ b/cat-coffee/style.css
@@ -13,27 +13,28 @@ p {
   /* 横幅設定 */
   body {
     max-width: 1080px;
-    min-width: 960px;
     margin: 0 auto 0 auto;
+    box-sizing: border-box;
   }
   
   /* ヘッダー */
-  /*  
+  
   header {
-    display: flex;
+    
     justify-content: space-between;
   }*/
 
   /* ナビゲーションのレイアウト */
-  #nav-pc {
+  #nav-pc a {
     font-size: 14px;
-    padding-top: 15px;
+    text-align: right;
+    text-decoration: none;
   }
     
   /* ナビゲーションのリンクの装飾設定 */
-  #nav-pc > a {
-    text-decoration: none;
-    text-align: right;
+  a {
+    
+    
   }
   #nav-pc > a:link {
     color: #0d0d0d;
@@ -46,4 +47,41 @@ p {
   #nav-pc > a:active {
     color: #0d0d0d;
   }
- 
+  
+  /*  メインビジュアル  */
+  #main-visual {
+    position: relative;
+    height: 400px;
+  }
+
+  #main-message {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background-color: #04414A;
+    color: #ffffff;
+    width: 100%;
+    height: 100%;
+    border-radius: 0 0 150px 0;
+    max-width: 620px;
+    z-index: 11;
+     
+  }
+  #mein-message, h1{
+    font-size: 60px;
+    font-weight: bold;
+    
+  }
+  #mein-message, p {
+    font-size: 28px;
+    
+  }
+  #coffee-visual {
+    max-width: 600px;  
+     position: absolute; 
+     top: 0;
+     right: 0; 
+     /* padding: 0 0 0 400px;   */
+     /* margin-bottom: 100%; */ 
+    z-index: 10;
+  }
